fix overflow

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -30,6 +30,7 @@ a {
   overflow-x: hidden;
   overflow-y: auto;
   width: 100%;
+  height: 100vh;
 }
 
 .screenTopNotification {
